see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

21-Mar-2011 Jean-Marie Simonet
 # [#25355] com_menus translation is missing for list items. Thanks Kolyamba.
 
20-Mar-2011 Mark Dexter
 # Fix typo in revision 20991

20-Mar-2011 Jean-Marie Simonet
 # [#25400] *langswitcher module can display content languages with no specific home page. Thanks Christophe.
 # [#25401] *Content language ordering not implemented. Thanks Christophe.
 
19-Mar-2011 Jean-Marie Simonet
 #$  [#25349] Menu item type Alias, not editable alias. Thanks Pavel.

18-Mar-2011 Jean-Marie Simonet
 # [#24710] Contact language is ignored in frontend. Thanks Christophe.
 # [#25021] Static caching of language switcher ruins the correct class lang-active behaviour. Thanks Mark Visser and Christophe. Tip: save again the switcher parameters.
 # [#25025] Fix New and Save icons for other components. Thanks Elin and Bill
 # [#24514] Inconsistency in the naming of the items statuses. Thanks Jozcef and Bill.

17-Mar-2011 Christophe Demko
 # [#24954] Module, plugin, and component scriptfile are not copied to final install point (Ian MacLennan)
 # [#25319] Incorrect language keys in error.php of atomic template (bill richardson)
 # [#24987] Contact form not using Jform, makes event not work as expected (Elin Waring, Jean-Marie Simonet)
 # [#25347] Menu alias not respecting "active" (bill richardson)
 # [#25360] Ordering of two modules options are inconsistent (bill richardson, Jozsef Tamas Herczeg)
 # [#25372] Don't use sizeof() (Rouven Weßling)

17-Mar-2011 Jean-Marie Simonet
 # [#25356] Following  tracker 25210. Thanks Christophe.